removing the static initializer (DOES NOT WORK)

--- a/tensorflow/compiler/xla/pjrt/BUILD
+++ b/tensorflow/compiler/xla/pjrt/BUILD
@@ -281,6 +281,7 @@ cc_library(
         "//tensorflow/stream_executor/tpu:tpu_platform_interface",
         "//tensorflow/stream_executor/tpu:tpu_topology_external",
         "//tensorflow/stream_executor/tpu:tpu_transfer_manager",
+	"//tensorflow/core/tpu:tpu_executor_dlsym_initializer",
         "@com_google_absl//absl/container:inlined_vector",
         "@com_google_absl//absl/flags:flag",
         "@com_google_absl//absl/memory",
