--- a/tensorflow/core/tpu/BUILD
+++ b/tensorflow/core/tpu/BUILD
@@ -208,7 +208,7 @@ cc_library(
     ],
     # Always link this in, because even if we don't use it directly we want its
     #static initializers to dynamically load API symbols exported from libtpu.so
-    alwayslink = True,
+    alwayslink = False,
 )
 
 # This is an alternative to "tpu_api_dlsym_initializer" that only initializes
@@ -220,6 +220,7 @@ cc_library(
         ["tpu_executor_dlsym_initializer_windows.cc"],
         otherwise = ["tpu_executor_dlsym_initializer.cc"],
     ),
+    hdrs = ["tpu_executor_dlsym_initializer.h"],
     visibility = ["//visibility:public"],
     deps = [
         ":tpu_api_dlsym_set_fn",
